src/App.css
#root
{
  width: 100%;
  height: 100%;
  margin:4em;
  text-align: center;
}
.menuBar
{
  width: 100%;
  margin: 6px;
  background-color: #97de97;
  overflow: auto;
}
.menuBar .menuIcon
{
  float: left;
  border: 0px;
  height: 22px;
  margin-left: 5px;
  border-radius: 50%;
  transition: all 0.3s ease;
  font-size: 11px;
  text-align: center;
}
.menuBar .menuIcon:hover
{
  opacity: 0.6;
}
.active
{
  background-color: #4caf50;
}
.webApp
{
  width: 100%;
  margin:5em;
  position: relative;
  border: 0.3px dotted gray;
}
.reopenIcon
{
  text-align: center;
  border: 0px;
  width: 60px;
  height: 70px;
  border-radius: 50%;
  transition: all 0.3s ease;
  font-size: 41px;
}
.reopenIcon i
{
  position: relative;
  top: calc(50% - 70px);
}
.reopenIcon:hover
{
  background-color: silver;
  opacity: 0.5;
}
.titleApp
{
  text-align: center;
  font-family: 'Courier New', Courier, monospace;
  margin-block-start: 0;
  margin-block-end: 0;
}
.billingZone
{
  text-align: center;
}
.customDD
{
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: inherit;
  width:82%;
  margin:0px;
}
.customDD select
{
  background-color: rgb(239, 248, 255);
  color:black;
  font-size: 1.5em;
  width:100%;
  padding:10px;
  border:0;
  margin:0;
  border-radius: 3px;
  text-indent: 0.01px;
  text-overflow: "";
  -webkit-appearance: button;
}
.customDD::before,
.customDD::after
{
  content: "";
  position: absolute;
  pointer-events: none;
}
.customDD::after
{
  content:"\25BC";
  height:inherit;
  line-height: 1.5;
  right: 1.2em;
  top:25%;
}
.customDD::before
{
  width:20px;
  right:0;
  top:0;
  bottom:0;
  border-radius: 0 3px 3px 0;
}
.billingZone select option:nth-child(even)
{
  background-color: gray;
}
.billingZone select option:nth-child(odd)
{
  background-color: lightgrey;
}
.billingZone input, .billingZone div input
{
  font-size: 16px;
  margin: 10px;
  color: black;
  width: 80%;
  padding: 10px;
}
.suggestBox
{
  width:100%;
  position: relative;
}
.suggestion
{
  position: absolute;
  border: 1px solid lightgreen;
  border-bottom: none;
  border-top: none;
  z-index:99;
  top:100%;
  left:0;
  right:0;
}
.activeSuggestion
{
  background-color: gray;
  padding: 10px;
  cursor: pointer;
  border-bottom: 1px solid gainsboro;
}
.suggestionDiv
{
  padding: 10px;
  cursor: pointer;
  background-color: white;
  border-bottom: 1px solid gainsboro;
}
.suggestionDiv:hover
{
  background-color: gray;
}
.billingZone .button-grid
{
  width:100%;
  height: 100%;
  display: grid;
  grid-template-columns: 50% 50%;
}
.billingZone .button-grid button
{
  padding: 10px;
  font-size: 19px;
  text-align: center;
  border:0px;
  margin-left: 5px;
}
.user-purchase
{
  overflow-x: auto;
  margin: 10px 5px 5px 5px;
}
.user-purchase-table
{
  border-collapse: collapse;
  width: 100%;
}
.user-purchase-table tr:nth-child(even)
{
  background-color: gray;
}
.user-purchase-table tr:nth-child(odd)
{
  background-color: darkgray;
}
.user-purchase-table tr td,th
{
  text-align: left;
  padding:10px;
}
.user-purchase-table tr th
{
  background-color: grey;
  color: black;
}
.tableoptions
{
  float: left;
}
.printbutton
{
  border-radius: 15%;
  font-size: 24px;
  background-color: #06c8ff;
  margin-bottom: 10px;
  float: right;
}
.excelbutton
{
  border-radius: 15%;
  font-size: 24px;
  background-color: greenyellow;
  margin-bottom: 10px;
  float: right;
}
.printbutton a
{
  text-decoration: none;
  color:white;
}
.excelbutton a
{
  text-decoration: none;
  color: green;
}
@media(min-width:576px)
{
  .webApp
  {
    max-width: 540px;
  }
}
@media(min-width:768px)
{
  .webApp
  {
    max-width: 720px;
  }
}
@media(min-width:992px)
{
  .webApp
  {
    max-width: 960px;
  }
}
@media(min-width:1200px)
{
  .webApp
  {
    max-width: 1140px;
  }
}
@media(min-width:1670px)
{
  .webApp
  {
    max-width: 1740px;
  }
}

